--- a/public/index.html
+++ b/public/index.html
@@ -1,42 +1,48 @@
+<!-- @format -->
+
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="https://i.postimg.cc/L6GpLKzp/Lagos.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <title>Taiwo Olapade</title>
+	<head>
+		<meta charset="utf-8" />
+		<link rel="icon" href="https://i.postimg.cc/L6GpLKzp/Lagos.png" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="theme-color" content="#000000" />
+		<meta
+			name="description"
+			content="Web site created using create-react-app"
+		/>
+		<title>Taiwo Olapade</title>
 
-    <!-- Place favicon.png in the root directory -->
-    <link rel="shortcut icon" href="%PUBLIC_URL%/assets/img/favicon.png" type="image/x-icon" />
-    <!-- Font Icons css -->
-    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/font-icons.css">
-    <!-- plugins css -->
-    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/plugins.css">
-    <!-- Main Stylesheet -->
-    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/style.css">
-    <!-- Responsive css -->
-    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/responsive.css">
-    <link
-    rel="stylesheet"
-    href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
-  />
-  <link
-    rel="stylesheet"
-    href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
-    integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
-    crossorigin=""
-  />
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    
-    <!-- <div class="quarter-overlay">
+		<!-- Place favicon.png in the root directory -->
+		<link
+			rel="shortcut icon"
+			href="%PUBLIC_URL%/assets/img/favicon.png"
+			type="image/x-icon"
+		/>
+		<!-- Font Icons css -->
+		<link rel="stylesheet" href="%PUBLIC_URL%/assets/css/font-icons.css" />
+		<!-- plugins css -->
+		<link rel="stylesheet" href="%PUBLIC_URL%/assets/css/plugins.css" />
+		<!-- Main Stylesheet -->
+		<link rel="stylesheet" href="%PUBLIC_URL%/assets/css/style.css" />
+		<!-- Responsive css -->
+		<link rel="stylesheet" href="%PUBLIC_URL%/assets/css/responsive.css" />
+		<link
+			rel="stylesheet"
+			href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+		/>
+		<link
+			rel="stylesheet"
+			href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+			integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+			crossorigin=""
+		/>
+	</head>
+	<body>
+		<noscript>You need to enable JavaScript to run this app.</noscript>
+		<div id="root"></div>
+
+		<!-- <div class="quarter-overlay">
       <div class="cv-spinner">
           <span class="spinner"></span>
       </div>
@@ -46,7 +52,8 @@
       <div id="quarter"></div>
     </div> -->
 
-    <script src="%PUBLIC_URL%/assets/js/plugins.js"></script>
-   
-  </body>
+		<script src="%PUBLIC_URL%/assets/js/plugins.js"></script>
+		<script src="./assets/js/script.js"></script>
+		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+	</body>
 </html>
