--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
     <div class="page-wrapper">
       <div id="quarter"></div>
     </div> -->
-
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="%PUBLIC_URL%/assets/js/plugins.js"></script>
 		<script src="./assets/js/script.js"></script>
 		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
